@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+New server setting: "special_break_map".
+Controls whether submaps in random maps can break the walls to be placed.
+On (can break) by default for historical reasons.
+Nicolas Weeger 2011-11-20
+
 Rewrite the i18n system. This makes it easier to use strings in the code,
 instead of arbitrary identifiers.
 Nicolas Weeger 2011-11-12
